gcc/testsuite/rust/compile/no-crate-level-outer-attr.rs
#![cold] // { dg-error "attribute cannot be used at crate level" }
pub fn test() {}
